<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- The name of the application. -->
    <string name="app_name">WQSozluk</string>
    <string name="facebook_app_id">1281695262866543</string>
    <string name="headerEndChar">¿</string>
    <string name="newlinebreak">¡</string>
    <!-- The label for use as a searchable item -->
    <string name="search_label">Dictionary</string>
    <!-- <string name="button2">Bibîne</string> -->
    <string name="description"></string>
    <string name="menu_settings">Bibîne</string>
    <string name="buttonc">ç</string>
    <string name="buttoni">î</string>
    <string name="typeToSearch">Hepsi</string>
    <string name="dialogNa">Hayır</string>
    <string name="dialogEre">Evet</string>
    <string name="dialogNeprise">Never Ask</string>
    <string name="zimanquery">Kurdî</string>
    <string name="toomanyresults">"'%s' şeklinde kısa bir arama bir çok sonuç bulmakta ve cihazınızın performansına öre uzun sürebilir?"</string>
    <string name="prgressbarText"> "Yükleiniyor...: %%1$d , Yüklendi: "
							%i başlık"</string>
    <string name="ferhengbarbudialogtext">%1$d kelime oluşturuldu </string>
    <string name="ferhengbarbudialogheader">Yüklendi</string>
    <string name="ferhengbarbu">%1$s %1$d  Kelimler yüklendi?.</string>
    <string name="zimantemp">Türkçe</string>
    <string name="listwordtypes">_lllistCûre</string>
    <string name="buttons">ş</string>
    <string name="hayjehebin">Dikkat</string>
    <string name="wiki">de</string>
    <string name="buttonu">û</string>
    <string name="buttone">ê</string>
    <string name="buttonii">ı</string>
    <string name="cureyepeyvan">Kelime Türleri</string>
    <string name="strAbout">Bu sözlüğün oluşturulmasında Wiktionary verileri kaynak olarak kullanılmıştır</string>
    <string name="linavbigere">Ara</string>
    <string name="hemuherf">Hemû Herf</string>
    <string name="buttonue">ü</string>
    <string name="strsort">Tür</string>
    <string name="strbinihere">Bknz.,Bakınız</string>
    <string name="translations">Çeviriler,çeviriler,Çeviri,Köken,Türk Dilleri,Türk lehçe,türk lehçeleri,Türk Dilleri</string>
    <string name="linkedSections">Anlam,Ad,Zarf,özel ad,Belirteç,Rakam,Eylem,Ünlem,Edat,Ön Ad,Zamir,İsim,Bağlaç, İsim,isim, Alt kavramlar,Deyimler, Köken</string>
    <string name="translatedLangs">Almanca,İngilizce,Fransızca,Kürtçe</string>
    <string name="headers">Etymology,Pronunciation,Prefix,Derived terms,Further reading,Letter,See also,Etymology 1,Noun,Declension,Related terms,Etymology 2,References,Proper noun,Particle,Preposition,Descendants,Adjective,Usage notes,Antonyms,Hyponyms,Verb,Alternative forms,Adverb,Determiner,Conjunction,Interjection,Synonyms,Conjugation,Inflection,Coordinate terms,Article,Pronoun,Numeral,Contraction,Etymology 3,Symbol,Hypernyms,Anagrams,Participle,Number,Meronyms,Compounds,Etymology 4,Phrase,Holonyms,Suffix,Punctuation mark,Prepositional phrase,Usage,Abbreviations,Postposition,Interfix,Derived,Circumfix,Paronyms,Proverb,Pronunciation 1,Pronunciation 2,Infix,Quotations,Hyponym,Trivia,Notes,Related items,Inflected form,Circumposition,Etymology 5,Etymology 6,Idiom,Collocations,Hypünyms,Gallery,Diacritical mark,Entclension,Simile,External links,Hyperynms,Henunciation</string>
    <string name="buttonoe">ö</string>
    <string name="buttong">ğ</string>
    <string name="buttonarabic">ابت</string>
    <string name="buttonlatin">abc</string>
    <string name="buttonreset">Sil</string>
    <string name="derbar">Hakkında</string>
    <string name="buttonhere">Here!</string>
    <string name="buttonarAlph">Er.</string>
    <string name="hejmaraSernavan">Başlık sayısı</string>
    <string name="Lêbigere">Ara</string>
    <string name="legerrinenbere">Eski aramalar</string>
       <string name="herekategoriye">Kategoriiye git</string>
          <string name="herekategoriyemesaj">Bu kategorideki kelimleri görmek istediğinizden emin misiniz \'%s\'? yüklenmesi zaman alabilir</string>
    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the dictionary</string>
    <string name="helpbody">Arama yapmak için arama kutucuğuna kelime yazıp arayabilirsiniz.</string>
    <string name="whatsnew">Yenilikler</string>
    <string name="loading">Kelimler yükleniyor  &#8230;</string>
    <string name="loaded"> Kelimeler yüklendi. Yeniden başlatmanız tavsiye edilir</string>
    <string name="processingwords">Li peyvan digere&#8230;</string>
    <string name="temam">Temam</string>
    <string name="betal">Betal</string>
    <string name="peyvtenjebirin">"Eski kelimeler siliniyor.."</string>
    <string name="resultsfound">%1$d sonuç buludu.</string>
    <string name="resultsnotfound"> \'%1$s\' için herhangi bir sonuç bulunamadı.</string>
        <string name="addedtofav">Peyva \'%1$s\' li ser favoriyan hat zêde kirin.</string>
           <string name="notaddedtofav">\'%1$s\' başlığı Favori listesine eklenemedi.</string>
                     <string name="favwordexists"> \'%1$s\' başlığı Favor ilistesinde zaten mevcut.</string>
    <string name="resultinstant">Rastgele kelime</string>
    <string name="langchange">Dil değiştirildi:</string>
    <string name="DerbarBody1">Sözlükte %1$s başlık mevcut </string>
    <string name="DerbarBody2"> . </string>
    <string name="Langku">Kürtçe</string>
    <string name="Langen">İngilizce</string>
    <string name="Langde">Almanca</string>
    <string name="Langtr">Türkçe</string>
    <string name="Langfa">Farsça</string>
    <string name="Admob_Intersitital">ca-app-pub-4819188859318435/6576518813</string>
    <string name="Admob_homeBanner">ca-app-pub-4819188859318435/5669588309</string>
    <string name="Admob_homehomeBanner">ca-app-pub-4819188859318435/8762655500</string>
    <string name="strJimar">Başlık Sayısı</string>
    <string name="strNameSpace">com.wqsozluk</string>
    <string name="AppRateString">Eger hûn ji bikaranîna %1$sê memnûn in, ji kerema xwe re binirxînin. Spas bo alîkariya we</string>
    <string name="Remind">Paşê bi bîr bîne!</string>
    <string name="Thanks">Na, Spas</string>
    <string name="Rate">%1$sê binirxîne</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>
    <string name="help">Alîkarî</string>
    <string name="ziman">Zimanguhertin</string>
    <string name="Useful">Ferhengeka Kurdî ya faydedar. </string>
      <string name="peyvebisine">Vê gotinê di Wikiferhengê de bibîne: </string>
       <string name="nowordSelected">Ji kerema xwe re li peyveke bigerrin û dû re bişînin. </string>
      
    <string name="select">Hilbijêre</string>
    <string name="parvekirin">Bişîne</string>
    <string name="liwikiferheng"> Wîkîferheng</string>

    <string name="bilevkirin">bilêvkirin</string>
    <string name="Xwendin">xwendin</string>
    <string name="na">Na</string>
    <string name="Gotin">pronunciation</string>
    <string name="Wate">wate</string>
    <string name="Bideber">Bide ber</string>
    <string name="Binihere">Binihêre</string>
    <string name="Dijwate">Dijwate</string>
    <string name="Hevwate">Hevwate</string>
    <string name="Tekildar">Têkildar</string>
    <string name="Bibine">Bibîne</string>
    <string name="bialfabeyendin">Bi alfabeyên din</string>
    <string name="Ji">Ji</string>
    <string name="Je">Jê</string>
    <string name="bikaranin">Bikaranîn</string>
    <string name="herwiha">Herwiha</string>
    <string name="tewandin">Tewandin</string>
    <string name="bizaravayendin">Bi zaravayên kurdî</string>
    <string name="werger">Werger</string>
    <string name="header">sernav</string>
    <string name="showkeys">Tîpên Taybet</string>
    <string name="langtranslations">Werg. Zimanan</string>
    <string name="headertranslation">Werg. Serenavan</string>
    <string name="strThema">Tema</string>
    <string name="strDark">Tarî</string>
    <string name="strLight">Ronî</string>
    <string name="strSysem">Sîstem</string>
    <string name="AllLangs">"Tüm Diller"</string>
    <string name="strLanguage">Zimanê App\'ê</string>

    <string name="jiwejeye">Ji Wêjeyê</string>
    <string name="derbaraminheader">Di derbara Programçêker de</string>
    <string name="DerbaraMin">Ew ferhenga ji hêla Fatîh Aydin ve, bi bingehgirtina daneyên(çavkaniyên) Wîkîferhengê û xêra kedkar û zehmetkêşên wê, hatiye çêkirin.
        Fatîh Aydin, ji xeynî programçêkerî ya kompîtûrê, bi tevkariya Wîkîferhengê, bi wergêrî û nivîskariyê hewl dide ku bo zimanê Kurdî tiştinan bike.
        Heta niha 4 wergerên wî, ji Almanî; Veguherîn(Die Verwandlung), Koloniya Tawanê(In der Strafkolonie) û Keleh(Das Schloß) ya Franz Kafka,  û Li Çiyayên Kurdistanê - Di Bin Nîveheyvê de(Briefe über die Zustände und Begebenheiten in der
Türkei 1835–39) ya Helmuth von Moltke û romaneka wî, Sefernameya Hezar û Yek Fersengî, hatiye weşandin. WQDictionary herwiha li ser IOS û Windows\'ê jî dikare bê bi kar anîn.
        Hûn dikarin ser li bloga wî û navnîşanên wî yên li jêr bidin;\n\n</string>
    <string name="Version47">Version 4.7 (03/06/2024) </string>
    <string name="Version47Body"> * Versiyona Target API hat bilind kirin.\n
    * Navrûyê Ferhengê û rengên piş hatin guhertin
    # Nasandina dengê(Nivîsandina Dengî) lê hat zêdekirin</string>


    <string name="Version45">Version 4.5 (10/10/2019) </string>
          <string name="Version45Body"> * Danegeh bi Wîkîferhengê ve hat wekhevkirin û niha di Ferhengê de nêzî 500 000\'an peyv hene.\n   
       	   * Li çendanî û çawaniya peyv û biwêjên ferhengê gelek çêtirkirin hatin kirin.\n
       	   * Li navrûyên ferhengê hin baştirkirin hatin kirin
           * Hişyarî: Bi zêdebûna peyvan re mezinahiya App\'ê ya li ser dîskê jî (~130 MB) zêde dibe, ji kerema xwe re kontrol bikin ka jê re şûn heye an na.</string><string name="Version42">Version 4.3 (16/07/2018) </string>
          <string name="Version42Body"> * Danegeh bi Wîkîferhengê ve hat wekhevkirin û niha di Ferhengê de nêzî 475 000\'an peyv hene.\n   
       	   * Li çendanî û çawaniya peyv û biwêjên ferhengê gelek çêtirkirin hatin kirin.\n
       	   * Taybetiya gerîna bi tilîxuşandinê hat zêde kirin. Êdî bi xuşandina tiliyan a li rast û çepê meriv dikare di nav lîsteyan de bigere. 
       	   Ew gerîna hêsan herwiha bi bûtona jî bi pêş de û paş de dikare bê kirin.\n
       	   * Taybetiya favorîkirinê hat lê zêdekirin. Êdî hûn dikarin peyv û biwêjan fav bikin û paşê lê binihêrin.  \n 
       	   * Bi hin algorîtmayan mezinahiya ferhengê hat kêm kirin û li hember zêdebûna naverokê mezinahiya app\'ê daket 115 MB\'an.\n\n
           
           * Hişyarî: Bi zêdebûna peyvan re mezinahiya App\'ê ya li ser dîskê jî (~115 MB) zêde dibe, ji kerema xwe re kontrol bikin ka jê re şûn heye an na.</string>
      

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>

</resources>