<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2f6699"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="#2f6699"
        android:scrollbars="vertical" >
             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Version47"
            android:textSize="16dp"
            android:textStyle="bold"
                 android:background="#2f6699"
                 android:textColor="#D6DEE6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2f6699"
            android:textColor="#D6DEE6"
            android:text="@string/Version47Body" />
                <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#2f6699"
                    android:textColor="#D6DEE6"
                    />
        
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Version45"

              android:textColor="#D6DEE6"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2f6699"
            android:textColor="#D6DEE6"
            android:text="@string/Version45Body" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#2f6699" />
         

    </LinearLayout>

</ScrollView>